--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                                     <span class="skills__number">85%</span>
                                 </div>
                                 <div class="skills__bar">
-                                    <span class="skills__percentage skills__socket"></span>
+                                    <span class="skills__percentage skills__java"></span>
                                 </div>
                             </div>
 
@@ -348,7 +348,7 @@
                                     <span class="skills__number">40%</span>
                                 </div>
                                 <div class="skills__bar">
-                                    <span class="skills__percentage skills__svelte"></span>
+                                    <span class="skills__percentage skills__python"></span>
                                 </div>
                             </div>
                         </div>
