--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
                                 <h3 class="qualification__title">SIMS</h3>
                                 <span class="qualification__subtitle">Student Info Management System</span>
                                 <div class="qualification__calendar">
-                                    <i class="uil uil-calendar-alt"></i><a href="">Click here to see code</a>
+                                    <i class="uil uil-calendar-alt"></i><a href="">Preview</a>
                                 </div>
                             </div>
 
@@ -492,7 +492,7 @@
                                 <h3 class="qualification__title">Beautiful Home Spaces</h3>
                                 <span class="qualification__subtitle">Interior desiging</span>
                                 <div class="qualification__calendar">
-                                    <i class="uil uil-calendar-alt"></i> <a href="">Preview</a>
+                                    <i class="uil uil-calendar-alt"></i> <a href="https://pavan347.github.io/BHS/html/">Preview</a>
                                 </div>
                             </div>
 
@@ -506,7 +506,7 @@
                                 <h3 class="qualification__title">GK Kitchens</h3>
                                 <span class="qualification__subtitle">Make your tounge tasty</span>
                                 <div class="qualification__calendar">
-                                    <i class="uil uil-calendar-alt"></i> Preview
+                                    <i class="uil uil-calendar-alt"></i><a href="https://gkdevelopers0405.github.io/GK-Kitchens/" target="_blank">Preview</a>
                                 </div>
                             </div>
 
