--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                 <div class="cols col3">
                     <h3 class="service_title">Gold Plan</h3>
                     <p>Fully Equiped Business website</p>
-                    <p class="service_amount">₹27,999</p>
+                    <p class="service_amount">₹25,999</p>
                     <ul>
                         <li><span><i class="uil uil-check"></i></span>Customized Design</li>
                         <li><span><i class="uil uil-check"></i></span>Free Domain 1 year</li>
@@ -300,7 +300,7 @@
 
                 </div>
 
-                <div class="cols col5">
+                <!-- <div class="cols col5">
                     <h3 class="service_title">Diamond+ Plan</h3>
                     <p> Andriod and IOS App</p>
                     <p class="service_amount">₹29,999</p>
@@ -309,7 +309,7 @@
                         <li><span><i class="uil uil-check-circle"></i></span>Customer Centric Design</li>
                         <li><span><i class="uil uil-check-circle"></i></span>Without Server</li>
                     </ul>
-                </div>
+                </div> -->
 
                 <div class=" service-contact">
                     <a href="tel:9392576089" class="button button--flex">
